# CardioNER.nl

./: .gitignore  README.md  pyproject.toml
bash_jobs/: gen_annotations.sh
cardioner/pubscience/: ner_caster.py
cardioner/src/: dataloader.py  debug_tokenizer.py  example_texts.py  light_ner.py  light_ner_word_level.py  loader.py  main.py  model_merger.py  predictor.py  run_validation.py  test.py  trainer.py  utils.py
docs/: mini_tutorial.md
sandbox/: b1_b2_splitter.ipynb  couple_cc_to_pmid.ipynb  extracting_cc.ipynb  ft_biobit_cardioccc.ipynb  list_pmc_files.py  load_term_parquet.ipynb  lorenzo_cardioccc.py  medmentions_to_tags.ipynb  multilabel_check.ipynb  parse_pmc_csv.py  res_check.ipynb
scripts/: README.md  append_semantic_groups.py  check_hashes.py  combine_inference.py  create_sap_pretraining_data.py  embedder_to_sbert.py  extend_dutch_umls.py  extend_pretraining_data.py  hf_config.py  mirrorbert_training.py  model2vec.py  parse_performance_json.py  push_to_huggingface.py  run_eurobert_inference.ps1  run_eurobert_training.ps1  run_inference_eurobert.sh  run_medroberta_training.sh  run_robber2023_training.sh  sap_training.py  sap_training.sh  sbert_to_static.py  sbert_training.py
scripts/mirror_bert_src/: __init__.py  contrastive_learning.py  data_loader.py  drophead.py  mirror_bert.py
scripts/pubmed_alignment/: OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README_ALIGNMENT.md  align_pubmed.py  align_pubmedV2.py  align_pubmed_embeddings.py  align_pubmed_optimized.py  align_pubmed_with_cc.py  align_txt_with_csv.py  analyze_matches.py  benchmark_alignment.py  split_large_file.py
scripts/sap_src/: data_loader.py  metric_learning.py  model_wrapper.py
src/cardioner/: environment.txt  evaluation.py  langextract.py  light_ner.py  light_ner_word_level.py  load_custom_models_demo.py  main.py  model_merger.py  (+9 more)
(+17 files in other folders)
