[tool.poetry]
name = "cardioner-nl"
version = "0.1.0"
description = "NER model for Dutch cardiovascular discharges"
authors = ["Bram van Es and Kasia Smietanka"]
license = "GPL-3"
readme = "README.md"
packages = [{ include = "cardioner" }]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.0"
spacy = "^3.7.5"
gensim = "^4.3.3"
scikit-learn = "^1.5.2"
scikit-lego = "^0.9.1"
seaborn = "^0.13.2"
simpletransformers = "^0.70.1"
seqeval = "^1.2.2"
datasets = "^3.1.0"
sentencepiece = "^0.2.0"
pydantic = "^2.9.2"
evaluate = "^0.4.3"
torchtext = "^0.18.0"
torch = { version = "2.5.0", source = "torch" }

accelerate = "^1.1.1"
pytorch-crf = "^0.7.2"
torchmetrics = "^1.6.1"
lightning = "^2.5.0.post0"
python-dotenv = "^1.0.1"
pytorch-metric-learning = "^2.8.1"
wandb = "^0.19.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"